syntax = "proto3";
package api.filrewardsd.pb;
option go_package = "github.com/textileio/textile/v2/api/filrewardsd/pb";

import "google/protobuf/timestamp.proto";
import "api/analyticsd/pb/analytics.proto";
import "api/sendfild/pb/sendfil.proto";

enum RewardType {
  REWARD_TYPE_UNSPECIFIED = 0;
  REWARD_TYPE_FIRST_KEY_ACCOUNT_CREATED = 1;
  REWARD_TYPE_FIRST_KEY_USER_CREATED = 2; // does this fit "register first user?"
  REWARD_TYPE_FIRST_ORG_CREATED = 3;
  REWARD_TYPE_INITIAL_BILLING_SETUP = 4;
  REWARD_TYPE_FIRST_BUCKET_CREATED = 5;
  REWARD_TYPE_FIRST_BUCKET_ARCHIVE_CREATED = 6;
  REWARD_TYPE_FIRST_MAILBOX_CREATED = 7;
  REWARD_TYPE_FIRST_THREAD_DB_CREATED = 8;
}

message Reward {
  string org_key = 1;
  string dev_key = 2;
  RewardType type = 3;
  int64 factor = 4;
  int64 base_nano_fil_reward = 5;
  google.protobuf.Timestamp created_at = 6;
}

message Claim {
  string id = 1;
  string org_key = 2;
  string claimed_by = 3;
  int64 amount_nano_fil = 4;
  api.sendfild.pb.MessageState state = 5;
  string txn_cid = 6;
  string failure_message = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message ProcessAnalyticsEventRequest {
  string org_key = 1;
  string dev_key = 2;
  api.analyticsd.pb.Event analytics_event = 3;
}

message ProcessAnalyticsEventResponse {
  Reward reward = 1;
}

message ListRewardsRequest {
  string org_key_filter = 1;
  string dev_key_filter = 2;
  RewardType reward_type_filter = 3;
  bool ascending = 4;
  int64 page_size = 5;
  int64 page = 6;
}

message ListRewardsResponse {
  repeated Reward rewards = 1;
}

message ClaimRequest {
  string org_key = 1;
  string address = 2;
  string claimed_by = 3;
  int64 amount_nano_fil = 4;
}

message ClaimResponse {
  Claim claim = 1;
}

message ListClaimsRequest {
  string org_key_filter = 1;
  string claimed_by_filter = 2;
  bool ascending = 3;
  int64 page_size = 4;
  int64 page = 5;
}

message ListClaimsResponse {
  repeated Claim claims = 1;
}

message BalanceRequest {
  string org_key = 1;
}

message BalanceResponse {
  int64 rewarded_nano_fil = 1;
  int64 claimed_pending_nano_fil = 2;
  int64 claimed_complete_nano_fil = 3;
  int64 available_nano_fil = 4;
}

service FilRewardsService {
  rpc ProcessAnalyticsEvent(ProcessAnalyticsEventRequest) returns (ProcessAnalyticsEventResponse) {}
  rpc ListRewards(ListRewardsRequest) returns (ListRewardsResponse) {}
  rpc Claim(ClaimRequest) returns (ClaimResponse) {}
  rpc ListClaims(ListClaimsRequest) returns (ListClaimsResponse) {}
  rpc Balance(BalanceRequest) returns (BalanceResponse) {}
}